# m2n

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  release-plz.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-bins.yml
src/: config.rs  main.rs  notion.rs  util.rs
src/commands/: check.rs  edit.rs  init.rs  list.rs  mod.rs  new.rs  push.rs  write.rs
