[package]
name = "m2n"
version = "0.1.0"
edition = "2024"
description = "Local-first CLI for creating Markdown notes and publishing to Notion"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
