[package]
name = "m2n"
version = "0.1.0"
edition = "2024"
description = "Local-first CLI for creating Markdown notes and publishing to Notion"
license = "MIT"
repository = "https://github.com/harshsandhu44/m2n"
homepage = "https://github.com/harshsandhu44/m2n"
keywords = ["notion", "markdown", "cli", "notes"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
